# futures-retry

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: main.yml
src/: backoff.rs  lib.rs
